# MAFU-I

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  exports.yml  main.c  types.h
src/: globals.h  hooks.h  main.c  menu.c  menu.h  types.h  utils.c  utils.h
src/threads/: mainthread.c  mainthread.h  playback.c  playback.h  record.c  record.h
